--- a/java/StringReversal/build.gradle
+++ b/java/StringReversal/build.gradle
@@ -1,30 +1,88 @@
+///////////////// Generic Gradle Stuff ///////////////////
+
 buildscript {
-    repositories {
-        mavenCentral()
-    }
 }
 
 plugins {
+    // Gradle Java core plugin. Adds Java compilation, testing and bundling capabilities to a project.
+    // https://docs.gradle.org/current/userguide/java_plugin.html#java_plugin
+    id 'java'
     // JetBrains IDEA core plugin for Gradle. Generates files that are used by Intellij IDEA IDE,
     // thus making it possible to import the project into IDEA.
     // https://docs.gradle.org/current/userguide/idea_plugin.html#idea_plugin
     id 'idea'
-    // JetBrains plugin for building IDEA projects with Gradle
+    // JetBrains IDE plugin for building IDEA projects with Gradle
     // https://github.com/JetBrains/gradle-intellij-plugin/blob/master/README.md
     id 'org.jetbrains.intellij' version '0.3.11'
-    // Gradle Java core plugin. Adds Java compilation, testing and bundling capabilities to a project.
-    // https://docs.gradle.org/current/userguide/java_plugin.html#java_plugin
-    id 'java'
 }
+apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.jetbrains.intellij'
-apply plugin: 'java'
+
+// Declare public binary repositories to download and consume open source dependencies
+repositories {
+    mavenCentral()
+}
+
+// Declare dependencies on modules hosted in repositories, files and other Gradle projects
+// https://docs.gradle.org/current/userguide/dependency_types.html#dependency_types
+dependencies {
+    // dependency required to compile the test source of the project
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+// Set Project properties
+//  https://docs.gradle.org/current/userguide/writing_build_scripts.html#sec:standard_project_properties
+project.group 'com.kineticsnw.StringReversal'
+project.version '0.2'
+// project.buildDir = "$project.projectDir/build"
+
+////////////////////////// Gradle Core Java Plugin Stuff ///////////////////////
+
+// For default Java plugin project layout (directory structure): https://docs.gradle.org/current/userguide/java_plugin.html#sec:java_project_layout
+// Custom project layout for this plugin (just for documentation, layout is actually default.)
+sourceSets {
+    main {
+        java {
+            srcDirs 'src/main/java'
+
+        }
+        resources {
+            srcDirs 'src/main/resources'
+        }
+    }
+    test {
+        java {
+            srcDirs 'src/test/java'
+        }
+        resources {
+            srcDirs 'src/test/resources'
+        }
+    }
+
+}
+
+// Build the java docs into the correct output directory
+// https://docs.gradle.org/current/dsl/org.gradle.api.tasks.javadoc.Javadoc.html
+task makeJavaDoc(type: Javadoc) {
+    source = sourceSets.main.allJava
+    destinationDir = file('/docs/javadoc')
+}
 
 
-// Package base for the IDEA project - there may be more than one package in a project
-group 'com.kineticsnw.StringReversal'
-// Version of the IDEA plugin
-version '0.2'
+//////////////////////// Gradle Core Idea Plugin Stuff //////////////////////// 
+
+// idea Task generates all IDEA configuration files
+idea {
+    // Enables fine-tuning module details - below is actually the default
+    module {
+        sourceDirs
+        resourceDirs
+    }
+}
+
+
+////////////////////////// IDEA Plugin for JetBrains IDEs /////////////////////
 
 
 intellij {
@@ -47,7 +105,7 @@ intellij {
 
     // The user-defined value from patchPluginXml.sinceBuild 
     // (or its default value) will be used as a since, and an "open" until value.
-    sameSinceUntilBuild = 'true'
+    sameSinceUntilBuild = 'false'
     
     // Do not download sources while initializing Gradle build
     downloadSources = 'false'
@@ -56,39 +114,17 @@ intellij {
     sandboxDirectory = "$project.buildDir/sr_sandbox"
 }
 
-// 
-idea {
-    // Enables fine-tuning module details
-    module {
-        sourceDirs
-        resourceDirs
-    }
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-// Patch plugin.xml with the following values
+// Patch the plugin.xml file with the following values
 patchPluginXml {
-    version = project.version           // a value for the <version> tag
-    sinceBuild = 'IC-182.4505.22'          // the since-build attribute of the <idea-version> tag
-    untilBuild = 'IC-183.3975.18'            // the until-build attribute of the <idea-version> tag              
+    version = project.version               // <version> tag value  
+    sinceBuild = 'IC-182.4505.22'           // <idea-version> tag since-build attribute 
+    untilBuild = 'IC-183.3975.18'           // <idea-version> tag until-build attribute               
     pluginDescription = 'Putting the cursor in a string literal gives users the option to reverse the string content'
-    changeNotes = 'Convert to Gradle'       // for the <change-notes> tag.
-//    pluginXmlFiles = 'plugin.xml'           // a collection of xml files to patch (in this case just 1)
-//    destinationDir = '${project.buildDir}/patchedPluginXmlFiles'    //  a directory to store patched xml files.
+    changeNotes = 'Convert to Gradle'       // <change-notes> tag value
+    // The collection of plugin.xml files to patch (in this case just 1)
+    pluginXmlFiles = ['plugin.xml']         
+    // the directory to store patched xml files
+    destinationDir = "$project.buildDir/patchedPluginXmlFiles"
 }
 
-// Defines the directories to be compiled
-sourceSets {
-    main {
-        java {
-            srcDirs 'main/java/src/'
-        }
-        resources {
-            srcDir 'main/resources/'
-        }
-    }
-}
 
