wip convert to gradle

--- a/java/enigma/application/build.gradle
+++ b/java/enigma/application/build.gradle
@@ -2,10 +2,9 @@ plugins {
     id 'java'
 }
 
-group 'com.kineticsnw'
-version '0.1'
+version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.11
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
